--- a/src/app/core/layouts/public/public.component.html
+++ b/src/app/core/layouts/public/public.component.html
@@ -1,1 +1,4 @@
-<p>public works!</p>
+<!-- Content -->
+<div class="flex items-center justify-center h-screen public-bg">
+  <router-outlet></router-outlet>
+</div>
