login page & service

--- a/src/app/core/layouts/public/public.component.html
+++ b/src/app/core/layouts/public/public.component.html
@@ -1,4 +1,4 @@
 <!-- Content -->
-<div class="flex items-center justify-center h-screen public-bg">
+<div class="flex items-center justify-center h-screen bg-slate-100">
   <router-outlet></router-outlet>
 </div>
