--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -31,7 +31,7 @@
         />
       </mat-form-field>
     </form>
-    <div class="w-full text-center pb-4">
+    <div class="w-full text-center">
       <button
         mat-raised-button
         color="primary"
@@ -41,5 +41,6 @@
         GİRİŞ
       </button>
     </div>
+    <div class="w-full text-center text-red-600 h-8 pt-4">{{this.message}}</div>
   </mat-card-content>
 </mat-card>
