--- a/src/app/core/layouts/private/private.component.html
+++ b/src/app/core/layouts/private/private.component.html
@@ -1,3 +1,6 @@
 <kfn-header></kfn-header>
-
-<router-outlet></router-outlet>
+<div class="bg-slate-100">
+    <div class="container mx-auto px-4 ">
+        <router-outlet></router-outlet>
+      </div>
+</div>
