--- a/src/app/pages/product/product.component.html
+++ b/src/app/pages/product/product.component.html
@@ -1,1 +1,26 @@
-<p>product works!</p>
+<div class="pt-4 h-screen">
+  <mat-card *ngIf="item">
+    <!-- Header -->
+    <div class="h-16 p-4 font-bold text-lg">{{ item.title }}<span class="text-gray-300">/ {{ item.category }}</span></div>
+    <!-- Image -->
+    <div class="w-full my-8 h-48">
+      <img
+        mat-card-image
+        [src]="item.image"
+        [alt]="item.title"
+        class="mx-auto"
+      />
+    </div>
+    <!-- Description    -->
+    <mat-card-content>
+      <span class="text-xs py-16 text-gray-400 mb-8">{{
+        item.description
+      }}</span>
+    </mat-card-content>
+    <!-- Actions -->
+    <mat-card-actions class="w-full flex justify-between mt-auto">
+      <span class="font-bold text-xl ml-2">{{ item.price }} ₺</span>
+      <button mat-raised-button color="accent">SEPETE EKLE</button>
+    </mat-card-actions>
+  </mat-card>
+</div>
