--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -11,6 +11,7 @@
   <button mat-button aria-label="SEpet" matTooltip="Sepet" routerLink="basket">
     <mat-icon>shopping_cart</mat-icon>
   </button>
+  <span>{{count}}</span>
   <button mat-button aria-label="Çıkış" matTooltip="Çıkış" (click)="logout()">
     <mat-icon>logout</mat-icon>
   </button>
