--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -1,4 +1,8 @@
-<div class="grid grid-cols-1 md:grid-cols-4 gap-4 py-8">
+<div class="pt-4">
+  <h3>Tüm Ürünler</h3>
+</div>
+
+<div class="grid grid-cols-1 md:grid-cols-4 gap-4 pb-8">
   <mat-card *ngFor="let item of list">
     <!-- Header -->
     <div class="h-16 p-4 font-bold cursor-pointer" [routerLink]="['/product', item.id]">{{ item.title }}</div>
