--- a/src/app/pages/product/product.component.html
+++ b/src/app/pages/product/product.component.html
@@ -1,5 +1,5 @@
 <div class="pt-4 h-screen">
-  <h3>Detay</h3>
+  <h3>Ürün Detay</h3>
   <mat-card *ngIf="item">
     <!-- Header -->
     <div class="h-16 p-4 font-bold text-lg">{{ item.title }}<span class="text-gray-300"> / {{ item.category }}</span></div>
