--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -4,7 +4,7 @@
 
   <!-- Space -->
   <span class="flex-auto"></span>
-  <span class="mr-8 text-sm font-light"
+  <span class="mr-8 text-sm font-light hide-name"
     >Hoş Geldin <b>{{ user }}</b
     >!</span
   >
