--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -1,5 +1,5 @@
-<div class="pt-4">
-  <h3>Tüm Ürünler</h3>
+<div class="pt-4 flex">
+  <h3>Tüm Ürünler</h3> <span class="ml-2 text-gray-400">({{list.length}})</span>
 </div>
 
 <div class="grid grid-cols-1 md:grid-cols-4 gap-4 pb-8">
