--- a/src/app/pages/products/products.component.scss
+++ b/src/app/pages/products/products.component.scss
@@ -1,7 +1,7 @@
-@use '@angular/material' as mat;
+@use "@angular/material" as mat;
 
 .card-hover {
-    &:hover {
-      @include mat.elevation(4);
-    }
+  &:hover {
+    @include mat.elevation(4);
   }
+}
